--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -30,23 +30,23 @@ jobs:
     needs: release
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v2
-    - name: Set up Python
-      uses: actions/setup-python@v2
-      with:
-        python-version: '3.9'
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install setuptools wheel
-      # Build distribution with setup.py 
-      - name: Build distributions
-        run: python setup.py sdist bdist_wheel --universal
-
-      # Publish the package on PyPi
-      - name: Publish package
-        if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
-        uses: pypa/gh-action-pypi-publish@v1.5.0
+      - uses: actions/checkout@v2
+      - name: Set up Python
+        uses: actions/setup-python@v2
         with:
-          user: __token__
-          password: ${{ secrets.PYPI_API_TOKEN }}
+          python-version: '3.x'
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install setuptools wheel
+        # Build distribution with setup.py 
+        - name: Build distributions
+          run: python setup.py sdist bdist_wheel --universal
+
+        # Publish the package on PyPi
+        - name: Publish package
+          if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags')
+          uses: pypa/gh-action-pypi-publish@v1.5.0
+          with:
+            user: __token__
+            password: ${{ secrets.PYPI_API_TOKEN }}
