--- a/setup.cfg
+++ b/setup.cfg
@@ -5,3 +5,10 @@ test=pytest
 max-line-length=120
 ignore=E501,E127,E128
 max-complexity=10
+exclude =
+    .git,
+    __pycache__,
+    build,
+    dist,
+    .venv,
+    restconf_cli/__init__.py
