--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Python package build and test CI/CD
+name: Build Status
 
 # Define the git action and branches where the process runs on
 on: 
@@ -45,8 +45,8 @@ jobs:
           # stop the build if there are Python syntax errors or undefined names
           flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
           # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 . --count --exit-zero --ignore=E501,E127,E128 --max-complexity=10 --max-line-length=120 --statistics
-          # flake8 . --ignore=E501,E127,E128
+          flake8 . --count --exit-zero --ignore=E501,E127,E128,W605 --max-complexity=10 --max-line-length=120 --statistics
+          # flake8 . --ignore=E501,E127,E128,W605
         continue-on-error: true
       
       # Runs unittest 
