--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,7 @@ test=pytest
 
 [flake8]
 max-line-length=120
-ignore=E501,E127,E128
+ignore=E501,E127,E128,W605
 max-complexity=10
 exclude =
     .git,
